--- a/spec/dummy_app/app/views/home/index.html.slim
+++ b/spec/dummy_app/app/views/home/index.html.slim
@@ -42,6 +42,11 @@
     = f.ng_text_field :even_number
     = f.ng_error_messages_for :even_number
 
+  div
+    = f.label :body
+    = f.ng_text_area :body
+    = f.ng_error_messages_for :body
+
   = f.ng_invalid
     .error style="color:red" Form is invalid
 
